[metadata]
name = pyobsidian
version = 0.1.0
description = A Python library for working with Obsidian vaults
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8
install_requires =
    click>=8.0

[options.extras_require]
test =
    pytest>=7.0
    pytest-mock>=3.10

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short 